[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "EPR_Frequency_Shift_Data_Collection"
version = "0.0.1"
authors = [
  { name="E. Terry-Welsh", email="eleanor.terry-welsh@wsu.edu" },
]
description = "A program for collecting data needed to measure epr frequency shift for spin exchange optical pumping"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: Windows",
]

[project.urls]
Homepage = "https://github.com/Saam-SEOP-Lab/epr-frequency-shift"
Issues = "https://github.com/Saam-SEOP-Lab/epr-frequency-shift/issues"